examples/errors/parsing/incr-no-spine-paren.rcn
main : () [impure] =
  let (v, pf, r2) = Get[Int] p, res r;
  ()
